crates/macro/ui-tests/struct-fields.stderr
error[E0277]: the trait bound `Foo: Copy` is not satisfied
  --> ui-tests/struct-fields.rs:10:12
   |
 8 | #[wasm_bindgen]
   | --------------- in this attribute macro expansion
 9 | struct Bar {
10 |     pub a: Foo,
   |            ^^^ unsatisfied trait bound
   |
help: the trait `Copy` is not implemented for `Foo`
  --> ui-tests/struct-fields.rs:3:1
   |
 3 | #[wasm_bindgen]
   | ^^^^^^^^^^^^^^^
note: required by a bound in `__wbg_get_bar_a::assert_copy`
  --> ui-tests/struct-fields.rs:8:1
   |
 8 | #[wasm_bindgen]
   | ^^^^^^^^^^^^^^^ required by this bound in `assert_copy`
   = note: this error originates in the derive macro `::wasm_bindgen::__rt::BindgenedStruct` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: Clone` is not satisfied
  --> ui-tests/struct-fields.rs:12:12
   |
12 |     pub b: Foo,
   |            ^^^ the trait `Clone` is not implemented for `Foo`
   |
help: consider annotating `Foo` with `#[derive(Clone)]`
   |
 3 + #[derive(Clone)]
 4 | #[wasm_bindgen]
   |
